--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -11,4 +11,4 @@ build: off
 build_script:
   - chmod +x gradlew
   - ./gradlew test --info
-  -  gradlew test -Dselenide.headless=true
+  - ./gradlew test -Dselenide.headless=true
